# labsCG

./: .clang-format  .gitignore  readme.md
WinFormsApp1/: Form1.Designer.cs
lab1/z1/: CMakeLists.txt  main.cpp  model.cpp  model.h  presenter.cpp  presenter.h
lab3/app/: build.gradle.kts
lab3/app/src/main/: AndroidManifest.xml
lab3/app/src/main/res/values/: themes.xml
lab3/gradle/wrapper/: gradle-wrapper.properties
lab3/z1/: App.cpp  App.h  BaseWindow.h  CMakeLists.txt  Func.cpp  Func.h  FuncParabola.cpp  FuncParabola.h  GLFWInitializer.cpp  GLFWInitializer.h  Window.h  main.cpp
lab3/z2/: CMakeLists.txt  ExampleApp.h  main.cpp
lab3/z2/App/: App.h
lab3/z2/Game/: GameView.h  GameViewModel.cpp  GameViewModel.h
lab3/z2/Window/: BaseWindow.cpp  BaseWindow.h  Window.cpp  Window.h
lab4/test/z1/: Form1.cs  Program.cs
lab4/test/z1/Figure/: Point3F.cs
lab4/test/z2/: Form1.Designer.cs  Form1.cs
lab4/test/z2/FigureImpl/: SnubDodecahedron.cs
lab4/z1/: Form1.Designer.cs  Form1.cs  Program.cs
lab4/z1/Figure/: Cube.cs  Face.cs
lab4/z1/FigureImpl/: Cube.cs
lab4/z1/presentation/: LabirintViewModel.cs
lab5/z1/: Form1.cs  z1.csproj
lab5/z1/Figure/: Sphere.cs
lab5/z1/FigureImpl/: Cube.cs  Floor.cs  SnubDodecahedron.cs  Sphere.cs
lab5/z1/presentation/: LabirintViewModel.cs
lab5/z1/util/: TextureLoader.cs
lab6/: Form1.Designer.cs  Form1.cs  labsCG - Ярлык.lnk  z1.csproj
lab6/assets/: rocket.max
lab6/old_presentation/: LabirintViewModel.cs
lab6/utils/: Model3d.cs
lab7/z1/: Form1.Designer.cs  Form1.cs  texture.Designer.cs
lab7/z2/: Form1.cs  z1.csproj
lab7/z3/: Form1.Designer.cs  Form1.cs
lab8/z1/: Form1.Designer.cs  Form1.cs
lab8/z1/Shaders/: Shader.cs  shader.frag  shader.vert
lab8/z2/: Form1.Designer.cs  Form1.cs  Program.cs  z1.csproj
lab8/z2/Shaders/: Shader.cs  shader.frag  shaderAnalytic.frag
lab8/z2/presentation/: ViewModel.cs
lab8/z3/: Form1.cs
labs1/z1/: main.cpp
labs1/z2/z2/: build.gradle.kts  settings.gradle.kts
labs1/z2/z2/src/main/kotlin/: Main.kt
labs1/z2/z2/src/main/kotlin/model/: IModel.kt  (+1 more)
labs1/z3/: settings.gradle.kts
labs1/z3/app/: build.gradle.kts
labs1/z3/app/src/main/: AndroidManifest.xml
labs1/z3/gradle/wrapper/: gradle-wrapper.properties
labs2/ConsoleApplication1/: ConsoleApplication1.cpp
labs2/app/: build.gradle.kts
labs2/app/src/main/: AndroidManifest.xml
labs2/gradle/wrapper/: gradle-wrapper.properties
z1/: CMakeLists.txt
(+36 files in other folders)
